--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>Hi! I'm NaKia! I've recently entered the world of programming. Journey with me as I document my thoughts and experiences! </p>
+<p>Hi! I'm NaKia! I've recently entered the world of programming (Full Stack Web Development). Journey with me as I document my thoughts and experiences! </p>
